@@ -3,6 +3,7 @@ package DAOs;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
 import java.util.ArrayList;
 import java.util.List;
@@ -18,38 +19,40 @@ public abstract class DAO<T> {
     }
 
     protected List<T> leerTodos(Function<String, T> mapeador) {
-        List<T> listaResultado = new ArrayList<>();
-
+        Path path = Paths.get(ruta);
+        if (!Files.exists(path)) {
+            return new ArrayList<>();
+        }
         try {
-            listaResultado = Files.lines(Paths.get(ruta))
+            return Files.lines(path)
                     .map(mapeador)
-                    .toList();
-
+                    .collect(java.util.stream.Collectors.toList());
         } catch (IOException e) {
             throw new RuntimeException("Error al leer los datos desde " + ruta, e);
         }
-        
-        return listaResultado;
     }
 
     protected void guardarTodos(List<T> lista, Function<T, String> formateador) {
         try {
+            Path path = Paths.get(ruta);
+            if (path.getParent() != null) {
+                Files.createDirectories(path.getParent());
+            }
             List<String> lineas = lista.stream()
                     .map(formateador)
-                    .toList();
-            
-            Files.write(Paths.get(ruta), lineas, StandardOpenOption.CREATE, StandardOpenOption.APPEND);
+                    .collect(java.util.stream.Collectors.toList());
 
+            Files.write(path, lineas,
+                    StandardOpenOption.CREATE,
+                    StandardOpenOption.TRUNCATE_EXISTING);
         } catch (IOException e) {
             throw new RuntimeException("Error al guardar los datos en " + ruta, e);
         }
     }
 
-    /*
-    protected void registrar(T item) {
-        List<T> actuales = leerTodos();
+    protected void registrar(T item, Function<String, T> mapeador, Function<T, String> formateador) {
+        List<T> actuales = leerTodos(mapeador);
         actuales.add(item);
-        guardarTodos(actuales);
+        guardarTodos(actuales, formateador);
     }
-    */
 }
